--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 	bclean = "!f() { git branch --merged ${1-master} | grep -v " ${1-master}$" | xargs -r git branch -d; }; f"
 	bdone = "!f() { git checkout ${1-master} && git up && git bclean ${1-master}; }; f"
 [core]
-	editor = atom -n -w
+	editor = emacs
 [user]
 	email = me@bobbywlindsey.com
 	name = bobbywlindsey
