--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,9 @@
 [alias]
 	co = checkout
-	ec = config --global -e
-	up = !git pull --rebase --prune $@ && git submodule update --init --recursive
-	cob = checkout -b
-	cm = !git add -A && git commit -m
-	save = !git add -A && git commit -m 'SAVEPOINT'
-	amend = commit -a --amend
-	wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
-	bclean = "!f() { git branch --merged ${1-master} | grep -v " ${1-master}$" | xargs -r git branch -d; }; f"
-	bdone = "!f() { git checkout ${1-master} && git up && git bclean ${1-master}; }; f"
+    cm = commit
+    st = status
 [core]
-	editor = subl -n -w
+	editor = vim
 [user]
 	email = me@bobbywlindsey.com
 	name = bobbywlindsey
