--- a/.gitconfig
+++ b/.gitconfig
@@ -3,11 +3,11 @@
     cm = commit
     st = status
     logp = log --pretty
-    adog = log --all --decorate --oneline --graph
+    logg = log --all --decorate --oneline --graph
 [core]
 	editor = vim
 [user]
-	email = me@bobbywlindsey.com
+	email = contact@bobbywlindsey.com
 	name = bobbywlindsey
 [push]
 	default = simple
