Fix tmux config errors; alias links.sh program

--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -2,6 +2,9 @@
 unbind C-b
 set -g prefix C-a
 
+# Pressing escape key is slow in vim, so unbind it
+set -sg escape-time 0
+
 # Pan splitting
 bind - split-window -v
 bind | split-window -h
@@ -15,11 +18,12 @@ bind -n M-j select-pane -D
 # Set bind key to reload configuration file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Set nvim as the default editor
-set -g status-keys nvim
-
-# change status bar background and foreground color
+# Change status bar background and foreground color
 set -g status-style fg=white,bg='colour235'
 
-# Set different background color for active window
-set -g window-status-current-bg magenta
+# 256 color support
+set -g default-terminal "screen-256color"
+
+# Sane scrolling
+set -g mouse on
+
