--- a/mac/alacritty/.config/alacritty/alacritty.toml
+++ b/mac/alacritty/.config/alacritty/alacritty.toml
@@ -10,6 +10,8 @@ TERM = "xterm-256color"
 [window]
 padding.x = 10
 padding.y = 10
+dimensions.lines = 40
+dimensions.columns = 100
 
 decorations = "Buttonless"
 
