Add new keybindings and update clock on lock screen

--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -225,6 +225,8 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+# Refresh waybar
+bind = $mainMod, W, exec, pkill waybar && waybar &
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, C, killactive,
