Set hyprcursor theme

--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -38,6 +38,7 @@ $menu = rofi -show drun -show-icons
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 
 ###################
@@ -211,7 +212,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Rofi launcher
-bind = $mainMod, F, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 # Lock screen
 bind = $mainMod SHIFT, L, exec, hyprlock
 # Screenshot
