Change clock from 24h to 12h

--- a/nixos/waybar/.config/waybar/config
+++ b/nixos/waybar/.config/waybar/config
@@ -56,7 +56,7 @@
   "clock": {
     "timezone": "America/Denver",
     "tooltip": false,
-    "format": "{:%H:%M  -  %A, %d}",
+    "format": "{:%I:%M %p  -  %A, %d}",
     "interval": 1
   },
 
