Set kitty as default terminal

--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun -show-icons
 
