--- a/nixos/waybar/.config/waybar/config
+++ b/nixos/waybar/.config/waybar/config
@@ -74,7 +74,7 @@
     "interval": 1,
     "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
     "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"],
-    "on-click": "ghostty -e htop"
+    "on-click": "kitty -e htop"
   },
 
   "memory": {
