--- a/nixos/kitty/.config/kitty/kitty.conf
+++ b/nixos/kitty/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ include current-theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
+font_family MesloLGS Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
