--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -3,7 +3,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+# Desktop config
 monitor=,preferred,auto,auto
+# Laptop config
+monitor=,preferred,auto,1.2
 
 
 ###################
@@ -14,7 +17,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun -show-icons
 
 
