--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@
 # Desktop config
 monitor=,preferred,auto,auto
 # Laptop config
-monitor=,preferred,auto,1.2
+monitor=eDP-1,preferred,auto,1.2
 
 
 ###################
@@ -40,8 +40,8 @@ $menu = rofi -show drun -show-icons
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+#env = HYPRCURSOR_SIZE,24
+#env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 
 ###################
