Add support for external monitors

--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -229,6 +229,13 @@ bind = $mainMod, j, movefocus, d
 # Refresh waybar
 bind = $mainMod, W, exec, pkill waybar && waybar &
 
+# Turn off laptop monitor when closing it and using external monitor
+# 1. Connect external monitor
+# 2. Close lid
+# 3. Disconnect the external monitor
+# 4. Open lid
+bindl=,switch:Lid Switch, exec, ~/.config/hypr/switch.sh
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
