--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -291,9 +291,11 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
+bindl = $mainMod CTRL, RIGHT, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = $mainMod CTRL, LEFT, exec, playerctl previous
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
