Add rofi media script and keybinding

--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -213,6 +213,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Rofi launcher
 bind = $mainMod, SPACE, exec, $menu
+# Rofi media launcher
+bind = $mainMod SHIFT, M, exec, ~/scripts/rofimedia.sh
 # Lock screen
 bind = $mainMod SHIFT, L, exec, hyprlock
 # Screenshot
