Add utilities rofi menu

--- a/nixos/hypr/.config/hypr/hyprland.conf
+++ b/nixos/hypr/.config/hypr/hyprland.conf
@@ -215,6 +215,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, SPACE, exec, $menu
 # Rofi media launcher
 bind = $mainMod SHIFT, M, exec, ~/scripts/rofimedia.sh
+# Rofi utilities launcher
+bind = $mainMod SHIFT, U, exec, ~/scripts/rofiutilities.sh
 # Lock screen
 bind = $mainMod SHIFT, L, exec, hyprlock
 # Screenshot
